<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
  >
        <item android:id="@+id/home"
            android:title="Home"
            android:icon="@drawable/ic_home"
            />
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_profile"
            />
        <item android:id="@+id/favourite"
            android:title="@string/favourite"
            android:icon="@drawable/ic_fav"
            />

        <item
            android:id="@+id/Order_history"
            android:title="@string/order_history"
            android:icon="@drawable/ic_order"/>

        <item android:id="@+id/FAQ"
            android:title="@string/faq"
            android:icon="@drawable/ic_faq"
            />
        <item android:id="@+id/Log_out"
            android:title="@string/log_out"
            android:icon="@drawable/ic_logout"

            />

    </group>
</menu>