<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@drawable/login_background">

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textColorHint="#ffffff"
        android:hint="@string/enter_mobile_number"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:layout_below="@id/editTextPhone"
        android:layout_centerHorizontal="true"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"/>


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
       android:background="#00574B"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:padding="8dp"
        android:textAlignment="center"
        android:layout_below="@id/button"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
         android:textColor="#ffffff"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textViewNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_signin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAllCaps="false"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="#ffffff"
       android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo" />


</RelativeLayout>