<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ResetPasswordActivity"
    android:padding="20dp"
    android:background="@drawable/reset_password">

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="153dp"
        android:layout_centerHorizontal="true"
        android:hint="enter_password (size more than 4)"
        android:textColorHint="#EDF7F5"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/editTextConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_below="@id/editTextPass"
        android:layout_marginVertical="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        android:textColorHint="#EDF7F5"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/Otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_otp"
        android:textStyle="bold"

        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="#EDF7F5"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@id/editTextConf"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>