<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    android:background="#ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:id="@+id/titltOrder"
        >
        <TextView

            android:id="@+id/resnameOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pind_tadka"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_weight="3.5"
            android:textColor="#135850"/>



    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
android:textColor="#135850"
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/_14_12_20"
        android:textSize="20sp"
        android:textStyle="bold" />

        <TextView

            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
android:textColor="#135850"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/_06_30_20"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleOrderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titltOrder"
        android:padding="10dp"
        android:layout_margin="5dp"/>
</LinearLayout>