<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#ffffff"
    app:cardCornerRadius="10dp"
    android:layout_margin="4dp"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
    android:id="@+id/llContent"
    android:layout_height="120dp"
    android:orientation="horizontal"
android:background="#ffffff"
    android:weightSum="6">
    <ImageView
        android:id="@+id/resImage"
        android:layout_width="0dp"
        android:layout_weight="1.5"
        android:src="@mipmap/ic_launcher"
        android:layout_height="120dp"
        android:scaleType="centerCrop"/>
    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/resName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_res"
            android:padding="8dp"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/rescost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_below="@id/resName"
            android:layout_marginTop="5dp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/favRes"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"

            android:src="@drawable/ic_heart" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/_4_5"
            android:textSize="20sp"
            android:padding="1dp"
            android:drawableEnd="@drawable/ic_star"
            android:textStyle="bold"
            android:textColor="#ECD649"/>

    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>