<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FaqFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.1 How will the Food will be delivered?"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_one"
                android:layout_centerHorizontal="true"
                />
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.2 What max time it will take to get delivered?"
                android:layout_centerHorizontal="true"
         />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_two"
                android:layout_centerHorizontal="true"
         />
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.3 Can, I cancel the order once the order is placed?"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_three"
                android:layout_centerHorizontal="true"
             />
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.4 For how many time the food is kept ?"
                android:layout_centerHorizontal="true"
               />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_four"
                android:layout_centerHorizontal="true"
                />
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.5 How can i pay?"
                android:layout_centerHorizontal="true"
              />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_five"
                android:layout_centerHorizontal="true"
             />
            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Q.6 Does the food is hygienic in the corona period also?"
                android:layout_centerHorizontal="true"
                />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_answer_six"
                android:layout_centerHorizontal="true"
                />

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#ffffff"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                />

        </LinearLayout>
    </ScrollView>


</FrameLayout>
